--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 
         <div class="ctaRow">
           <!-- TODO: Put your real links here -->
-          <a class="btn primary" href="https://www.etsy.com/" target="_blank" rel="noopener">Shop on Etsy</a>
+          <a class="btn primary" href="https://www.etsy.com/shop/ATwoCrafts" target="_blank" rel="noopener">Shop on Etsy</a>
           <a class="btn" href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a>
         </div>
       </section>
