--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
           <div class="ctaRow" id="links">
             <!-- TODO: replace the # links with your real URLs -->
-            <a class="btn primary" href="https://www.etsy.com/" target="_blank" rel="noopener">
+            <a class="btn primary" href="https://www.etsy.com/shop/ATwoCrafts" target="_blank" rel="noopener">
               🛍️ Visit my Etsy store
             </a>
             <a class="btn" href="https://www.instagram.com/" target="_blank" rel="noopener">
